se añade rollers de redes sociales en desktop

--- a/index.html
+++ b/index.html
@@ -39,8 +39,26 @@
     </header>
 
     <main>
+        <!-- rollers de redes sociales para desktop -->
+        <div class="roller-container">
+            <div class="roller-flex-column">
+                <div class="roller" id="roller-ins">
+                    <div class="roller-inner"><a href="https://www.instagram.com/marimondasdelbarrioabajo/?hl=es-la" target="blank">@marimondasdba</a><img src="./imagenes/ins.jpg" alt="logo-instagram"></div>
+                </div>
+                <div class="roller" id="roller-face">
+                    <div class="roller-inner"><a href="https://www.facebook.com/pages/category/Personal-Blog/Las-Marimondas-del-Barrio-Abajo-509351969417043/" target="blank">marimondasdba</a><img src="./imagenes/face.jpg" alt="logo-facebook"></div>
+                </div>
+                <div class="roller" id="roller-twit">
+                    <div class="roller-inner"><a href="https://twitter.com/marimondasdelba" target="blank">@marimondasdelBA</a><img src="./imagenes/twit.jpg" alt="logo-twitter"></div>
+                </div>
+                <div class="roller" id="roller-wt">
+                    <div class="roller-inner"><a href="https://wa.me/message/3QHH5S77QFD7D1" target="blank">(+57) 312 765 2345</a><img src="./imagenes/wt.jpg" alt="logo-wt"></div>
+                </div>
+            </div>
+        </div>
 
-        <!-- descripción del podcast channel -->
+
+        <!-- descripción de la comparsa -->
         <section id="description">
             <h1><span>Marimondas del Barrio Abajo</span> <span id="world">de
                         Paraguita.</span></h1>
@@ -58,12 +76,12 @@
                                 fa-whatsapp"></i></a>
                 </div>
             </div>
-            <!-- boton de conoce más -->
+            <!-- link para dar datos en google form -->
             <div class="btn-primary1">
                 <p class="text-btn-primary"> Inscribete hoy! </p>
             </div>
         </section>
-        <!-- sección podcasts -->
+        <!-- sección de eventos y noticias -->
 
         <section class="bg-seccion-eventos">
             <svg class="episode-backgound-top" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
@@ -149,7 +167,7 @@
             </div>
         </section>
 
-        <!-- secion de invitados estelares -->
+        <!-- seccion maromondas de honor -->
         <section class="invitados">
             <h2 class="titulo_seccion_dark2" id="invitados">Marimondas de honor</h2>
             <!-- galeria de imagenes -->
@@ -163,7 +181,7 @@
             </div>
         </section>
 
-        <!-- sección alguno de nuestros temas -->
+        <!-- sección valores de la agrupación -->
         <section class="temas">
             <h2 class="titulo_seccion_dark3" id="titulo_seccion_dark3">Requisitos marimonderos</h2>
             <!-- iconos -->
