--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <div class="seccion-eventos">
 
-                <iframe class="video" width="100%" height="50" src="https://www.youtube.com/embed/osWgUdmDMFE" frameborder="0" allow="accelerometer; autoplay;
+                <iframe class="video" width="100%" height="50" src="https://www.youtube.com/watch?v=Roy6iCnaaKc" frameborder="0" allow="accelerometer; autoplay;
                             encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                 <div id="event-container">
